demo/hello-app-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment-v1
spec:
  selector:
    matchLabels:
      greeting: hello
      version: 220701-142553
  replicas: 3
  template:
    metadata:
      labels:
        greeting: hello
        version: 220701-142553
    spec:
      containers:
      - name: hello-app
        image: gcr.io/flius-vpc-2/hello-app:220701-142553
