demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  labels:
    app: hello-app
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    greeting: hello
